tests/fail/cast_no_parenthesis.tk
shape MyType(val: i32)

impl MyType {
    pub fn test(self) {
        
    }
}

fn main() -> i32 {
    auto x = MyType(val = 10)
    // '.'
    auto y = x as MyType.test()
    return 0
}
